# BTScraper

./: .gitignore  BTScraper.cabal  README.md  stack.yaml
app/: Main.hs
src/: Cache.hs  Csv.hs  Github.hs  GithubCommit.hs  Jira.hs  JiraJson.hs  Python.hs  Stats.hs
