name:                BTScraper
version:             0.1.0.0
synopsis:            Scraping some BTSes
description:         Please see README.md
homepage:            https://github.com/matonix/BTScraper#readme
license:             BSD3
license-file:        LICENSE
author:              matonix
maintainer:          automatonix@gmail.com
copyright:           2016 matonix
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Python
                     , Stats
                     , Cache
  build-depends:       base >= 4.7 && < 5
                     , scalpel
                     , unix-time
                     , bytestring
                     , cassava
                     , vector
                     , binary
  default-language:    Haskell2010

executable BTScraper
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , BTScraper
  default-language:    Haskell2010

test-suite BTScraper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , BTScraper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matonix/BTScraper
